--- a/204/sinatra_ar/sinatra-mvc/app/views/people/index.erb
+++ b/204/sinatra_ar/sinatra-mvc/app/views/people/index.erb
@@ -10,7 +10,14 @@
 		<tr>
 			<td><a href="<%= "/people/#{person.id}" %>">
 				<%= "#{person.first_name} #{person.last_name}" %></a></td>
-			<td><%= "#{person.birthdate}" %></td>
+			<td><%= "#{person.birthdate}" %> </td>
+			<td><a href="<%= "/people/#{person.id}/edit" %>"> Edit</a></td>
+			<td>
+				<form action="<%= "/people/#{person.id}" %>" method="post">
+					<input type="hidden" name="_method" value="delete" />
+					<input type="submit" value="Delete" />
+				</form>
+			</td>
 		</tr>
 	<% end %>
 
