--- a/204/sinatra_ar/sinatra-mvc/app/views/layout.erb
+++ b/204/sinatra_ar/sinatra-mvc/app/views/layout.erb
@@ -2,22 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Numerology App</title>
+<title>Numerology App 1</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/people.css">
+
+<link href='http://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
-	<div class="container">
-		<div class="header">
-			<h1>Numerology Calculator <small>A Skillcrush Project</small></h1>
-			</div>
-			 
-			<hr />
+	<div class="container-fluid">
 
+		<div class="content col-md-6">
 			<%= yield %>
 		</div>
+
 	</div>
 </body>
 </html>
