--- a/204/sinatra_ar/sinatra-mvc/app/views/people/index.erb
+++ b/204/sinatra_ar/sinatra-mvc/app/views/people/index.erb
@@ -15,7 +15,7 @@
 			<td>
 				<form action="<%= "/people/#{person.id}" %>" method="post">
 					<input type="hidden" name="_method" value="delete" />
-					<input type="submit" value="Delete" />
+					<input type="submit" value="Delete" class="button delete" />
 				</form>
 			</td>
 		</tr>
