--- a/204/sinatra_ar/sinatra-mvc/app/views/people/new.erb
+++ b/204/sinatra_ar/sinatra-mvc/app/views/people/new.erb
@@ -1,12 +1,2 @@
-<form action="/people" method="post">
-	<label for="first_name">First Name:</label>
-	<input type="text" name="first_name" />
-
-	<label for="first_name">Last Name:</label>
-	<input type="text" name="last_name" />
-
-	<label for="first_name">Birthdate:</label>
-	<input type="date" name="birthdate" />
-
-	<input type="submit" />
-</form>
+<h2>Create Person</h2>
+<%= erb :"/people/_form" %>
