finalized numerology app

--- a/204/sinatra_ar/sinatra-mvc/app/views/layout.erb
+++ b/204/sinatra_ar/sinatra-mvc/app/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Numerology App 1</title>
+<title>Numerology App</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
