--- a/204/sinatra_ar/sinatra-mvc/app/views/people/show.erb
+++ b/204/sinatra_ar/sinatra-mvc/app/views/people/show.erb
@@ -1,3 +1,4 @@
 <h2><%= "#{@person.first_name} #{@person.last_name}" %></h2>
 <p>Birthdate: <%= "#{@person.birthdate}" %></p>
 <p><%= "#{@message}" %></p>
+<p><a href="/people">View all People</p>
