--- a/204/sinatra_ar/sinatra-mvc/public/css/people.css
+++ b/204/sinatra_ar/sinatra-mvc/public/css/people.css
@@ -58,3 +58,9 @@ table {
 td {
 	padding: 8px;
 }
+
+.errors {
+	padding: 10px;
+	border: 2px solid red;
+	background-color: rgba(255, 0, 0, 0.27);
+	color: red;}
